--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         .content {
             position: relative;
             z-index: 1;
-            margin: 100vh 0 0;
+            margin: 10vh 0 0;
             /* Ensure content starts below the canvas */
             padding: 20px;
             /* Add some padding for better visibility */
@@ -66,10 +66,10 @@
         <canvas id="q">
         </canvas>
         <div class="min-h-screen flex flex-col items-center justify-center code-rain-animation">
-            <h1 class="text-5xl font-bold mb-2">John Doe</h1>
+            <h1 class="text-5xl font-bold mb-2">Camilo Chaves</h1>
             <p class="text-lg mb-5">Backend Web Developer</p>
             <div class="text-center space-y-4">
-                <p>Welcome to my digital realm. Here's a glimpse into my backend development universe.</p>
+                <p>Welcome to my digital realm. Here's a glimpse into my backend development work.</p>
                 <div>
                     <a href="#projects"
                         class="px-4 py-2 bg-green-700 hover:bg-green-800 transition-colors rounded">Projects</a>
@@ -97,53 +97,9 @@
                 </div>
             </div>
         </section>
-
-        <section id="contact" class="py-20 bg-gray-900 text-white bg-opacity-50">
-            <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold text-center mb-12">Contact</h2>
-                <form class="w-full max-w-lg mx-auto">
-                    <div class="flex flex-wrap -mx-3 mb-6">
-                        <div class="w-full px-3">
-                            <label class="block uppercase tracking-wide text-xs font-bold mb-2" for="name">
-                                Name
-                            </label>
-                            <input
-                                class="appearance-none block w-full bg-gray-900 text-white border border-gray-700 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-gray-700"
-                                id="name" type="text">
-                        </div>
-                    </div>
-                    <div class="flex flex-wrap -mx-3 mb-6">
-                        <div class="w-full px-3">
-                            <label class="block uppercase tracking-wide text-xs font-bold mb-2" for="email">
-                                Email
-                            </label>
-                            <input
-                                class="appearance-none block w-full bg-gray-900 text-white border border-gray-700 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-gray-700"
-                                id="email" type="email">
-                        </div>
-                    </div>
-                    <div class="flex flex-wrap -mx-3 mb-6">
-                        <div class="w-full px-3">
-                            <label class="block uppercase tracking-wide text-xs font-bold mb-2" for="message">
-                                Message
-                            </label>
-                            <textarea
-                                class="appearance-none block w-full bg-gray-900 text-white border border-gray-700 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-gray-700"
-                                id="message" rows="5"></textarea>
-                        </div>
-                    </div>
-                    <div class="flex flex-wrap -mx-3 mb-6">
-                        <div class="w-full px-3 text-center">
-                            <button
-                                class="px-6 py-3 bg-green-600 hover:bg-green-700 text-white font-bold rounded transition-colors"
-                                type="submit">Send Message</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </section>
     </div>
     <script>
+        
         var s = window.screen;
         var width = q.width = s.width;
         var height = q.height = s.height;
@@ -158,7 +114,7 @@
             var fraction = Math.min(elapsedTime / duration, 1); // Calculate the fraction of the transition completed
 
             // Interpolate the green color component from 255 to 0
-            var greenValue = Math.floor(255 * (1 - fraction));
+            var greenValue = Math.floor(200 * (1 - fraction));
             var color = `rgb(0, ${greenValue}, 0)`; // Construct the color string
 
             q.getContext('2d').fillStyle = 'rgba(0,0,0,.05)';
@@ -199,7 +155,13 @@
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
             });
         });
-
+        window.onload = function() {
+            window.scroll({
+                top: 0,
+                left: 0,
+                behavior: 'smooth' // You can use 'auto' instead of 'smooth' for an instant scroll
+            });
+        };
     </script>
 
 </body>
