feat: projects section readable and spaced

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1 class="text-5xl font-bold mb-2 text-center">Camilo Chaves</h1>
             <h2 class="text-lg mb-5 text-center">Backend Web Developer</h2>
             <div class="text-center space-y-4">
-                <p>Welcome to my digital realm. Here's a glimpse into my backend development work.</p>
+                <p>Welcome to my digital realm. Here's a glimpse into my backend development reality.</p>
                 <div>
                     <a href="#projects"
                         class="px-4 py-2 bg-green-700 hover:bg-green-800 transition-colors rounded">Projects</a>
@@ -81,7 +81,7 @@
 
         <section id="projects" class="py-20">
             <!-- Existing project section -->
-            <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-50">
+            <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">Knowkee (mobile app)</h3>
                 <p class="text-gray-300">
                     A digital wallet for you to store and share your life achievements.
@@ -129,7 +129,7 @@
             </div>
             <!-- End of modified project block -->
             <!-- Existing project section -->
-            <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-50">
+            <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">SmartPass</h3>
                 <p class="text-gray-300">
                     A user authentication API
@@ -175,7 +175,7 @@
                     </button>
                 </div>
             </div>
-            <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-50">
+            <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">Email campaign ETL</h3>
                 <p class="text-gray-300">
                     An email event data streaming ETL pipeline
