--- a/index.html
+++ b/index.html
@@ -83,49 +83,87 @@
             <!-- Existing project section -->
             <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">Knowkee (mobile app)</h3>
-                <p class="text-gray-300">
-                    A digital wallet for you to store and share your life achievements.
-                </p>
-                <div class="dropdown inline-block mt-4">
-                    <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
-                        <!-- Add detailed project information here -->
-                        <p>Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Nam in bibendum turpis, sed pellentesque turpis. Aenean auctor
-                            erat
-                            nisl, nec dictum risus imperdiet eu. In ut ipsum et massa faucibus bibendum ac in justo.
-                            Fusce ac
-                            lorem vitae dui pharetra dapibus non ut leo. Sed eu sagittis quam. Pellentesque non lacus
-                            neque.
-                            Curabitur lectus leo, vulputate ut felis eget, feugiat gravida metus. Suspendisse in
-                            tincidunt enim,
-                            at feugiat arcu. Sed imperdiet a ligula quis tempor. In finibus molestie rhoncus. Nulla
-                            facilisi.
-                            Mauris luctus purus non vehicula posuere. Curabitur tellus tellus, pretium eget accumsan
-                            varius,
-                            aliquam ac leo. Ut et quam ac tortor luctus malesuada. Cras tincidunt molestie iaculis.
+                <h4 class="text-gray-300">
+                    A digital wallet for you to store and share your life achievements, available on the Play Store and
+                    App Store.
+                    <h4>
+                        <div class="dropdown inline-block mt-4">
+                            <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
+                                <!-- Add detailed project information here -->
+                                <p class="pb-5"><strong>My Role:</strong> Backend Developer. Collaborated in the
+                                    creation, from scratch, of this
+                                    application available on the Play Store and App Store. Throughout the entire
+                                    development
+                                    lifecycle of the application, I participated in the backend development, but with
+                                    some
+                                    interventions in the code of the mobile app itself. <br>
+                                    <br>
+                                    <strong>The Tech Stack:</strong> In this modern tech stack, Python served as the
+                                    backend
+                                    language, orchestrating the interaction between various services. DocumentDB and
+                                    DynamoDB
+                                    were employed as NoSQL databases, offering flexible data storage. The system's
+                                    gateway to
+                                    the outside world was managed by Amazon API Gateway, which seamlessly connected with
+                                    AWS
+                                    Lambda, facilitating serverless compute functionality. Email communication was
+                                    streamlined
+                                    through AWS Simple Email Service (SES), while Simple Notification Service (SNS)
+                                    handled
+                                    messaging. User authentication and management were delegated to Amazon Cognito. REST
+                                    and
+                                    HTTP APIs enabled smooth communication between components. The React Native app,
+                                    coded in
+                                    Typescript, served as the dynamic and responsive frontend. Version control was
+                                    managed using
+                                    CodeCommit/git, while AWS SAM and CloudFormation simplified serverless application
+                                    deployment. JSON Web Tokens (JWT) secured communication, and third-party APIs
+                                    expanded the
+                                    system's capabilities, creating a robust, scalable, and versatile technological
+                                    ecosystem.<br>
+                                    <br>
+                                    <strong>The team:</strong> For this project the team was conformed by 2 backend
+                                    developers,
+                                    2 frontend developers, a lead developer, and a product owner (CTO). As well as the
+                                    support
+                                    from an international business partner's team in the use of their API. <br>
+                                    <br>
+                                    <strong>The Problem:</strong> The challenge in developing this mobile app lies in
+                                    designing and implementing a
+                                    functional digital wallet system. This system should enable users to securely store
+                                    and share various life achievements, encompassing educational certificates, work
+                                    history, recommendations, and badges. The primary objective is to create a robust
+                                    and user-friendly mobile application that effectively manages and facilitates the
+                                    sharing of diverse personal accomplishments within a secure digital environment.<br>
+                                    <br>
+                                    <strong>The Solution:  </strong>
+                                    To address the specified problem, as it pertains to th backend, a comprehensive solution was implemented, centered
+                                    around a REST API designed to manage the creation, reception, storage, and retrieval
+                                    of credentials. These credentials were verified by a third-party Internet of
+                                    Credentials provider. The primary databases employed in this solution were NoSQL
+                                    databases, chosen for their flexibility and scalability, as well as for the compatibility with the ceredentials data format.
 
-                            Duis bibendum urna a placerat molestie. In at nulla sapien. Pellentesque aliquam augue sed
-                            aliquet
-                            finibus. Donec sed egestas sem. Donec consectetur, erat a varius tristique, mi eros molestie
-                            sem,
-                            consequat interdum leo nisl quis mauris. Pellentesque volutpat nibh vel arcu cursus, cursus
-                            auctor
-                            turpis pellentesque. Praesent blandit magna a nisi iaculis tempus. Quisque rhoncus ipsum
-                            nunc, vitae
-                            tristique est pellentesque in. Maecenas sed sem sit amet sem ornare pellentesque. In hac
-                            habitasse
-                            platea dictumst. Nulla ut elit enim. In tincidunt urna blandit pulvinar tincidunt. Aliquam
-                            lobortis,
-                            mi in euismod consectetur, est nunc egestas urna, ultricies fringilla lorem nisl sit amet
-                            tortor.
-                            Integer odio sapien, ornare non volutpat id, volutpat sed mi. Nunc iaculis eu mi id maximus.
-                        </p>
-                    </div>
-                    <button onclick="toggleDropdown('knowkee')"
-                        class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
-                        Show Details
-                    </button>
-                </div>
+                                    Proper encryption measures were implemented both at rest and in transit to ensure
+                                    the security of sensitive data. The handling, transformation, and presentation of
+                                    various credential types were standardized using the JSON format, providing a
+                                    structured and interoperable data format.
+
+                                    For user interactions, a secure user authentication and authorization system was
+                                    established, safeguarding access to the stored credentials. This included robust
+                                    mechanisms to verify the identity of users and control their access privileges.
+
+                                    The mobile application seamlessly interacted with the REST API, utilizing it as a
+                                    backend service to retrieve and display user information. This approach ensured a
+                                    smooth and secure user experience, allowing individuals to manage and share their
+                                    life achievements with confidence in the integrity and privacy of their credentials. <br>
+                                    <br>
+                                </p>
+                            </div>
+                            <button onclick="toggleDropdown('knowkee')"
+                                class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
+                                Details
+                            </button>
+                        </div>
             </div>
             <!-- End of modified project block -->
             <!-- Existing project section -->
@@ -171,7 +209,7 @@
                     </div>
                     <button onclick="toggleDropdown('smartpass')"
                         class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
-                        Show Details
+                        Details
                     </button>
                 </div>
             </div>
@@ -225,7 +263,7 @@
                     </div>
                     <button onclick="toggleDropdown('email')"
                         class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
-                        Show Details
+                        Details
                     </button>
                 </div>
             </div>
