--- a/index.html
+++ b/index.html
@@ -90,13 +90,11 @@
                         <div class="dropdown inline-block mt-4">
                             <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                                 <!-- Add detailed project information here -->
-                                <p class="pb-5"><strong>My Role:</strong> Backend Developer. Collaborated in the
+                                <p class="pb-5"><strong>My Role:</strong> Collaborated in the
                                     creation, from scratch, of this
                                     application available on the Play Store and App Store. Throughout the entire
                                     development
-                                    lifecycle of the application, I participated in the backend development, but with
-                                    some
-                                    interventions in the code of the mobile app itself. <br>
+                                    lifecycle of the application, I participated mainlly in the backend development, and in an integration of a third party's APK with our mobile app code. <br>
                                     <br>
                                     <strong>The Tech Stack:</strong> In this modern tech stack, Python served as the
                                     backend
