--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="dropdown inline-block mt-4">
                             <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                                 <!-- Add detailed project information here -->
-                                <p class="pb-5"><strong>My Role:</strong> Backend. Collaborated in the
+                                <p class="pb-5"><strong>My Role:</strong> Backend. I collaborated in the
                                     creation, from scratch, of this
                                     application available on the Play Store and App Store. Throughout the entire
                                     development
