--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                                     creation, from scratch, of this
                                     application available on the Play Store and App Store. Throughout the entire
                                     development
-                                    lifecycle of the application, I participated mainlly in the backend development, and in an integration of a third party's APK with our mobile app code. <br>
+                                    lifecycle of the application, I participated mainlly in the backend development, and
+                                    in an integration of a third party's APK with our mobile app code. <br>
                                     <br>
                                     <strong>The Tech Stack:</strong> In this modern tech stack, Python served as the
                                     backend
@@ -134,12 +135,14 @@
                                     and user-friendly mobile application that effectively manages and facilitates the
                                     sharing of diverse personal accomplishments within a secure digital environment.<br>
                                     <br>
-                                    <strong>The Solution:  </strong>
-                                    To address the specified problem, as it pertains to th backend, a comprehensive solution was implemented, centered
+                                    <strong>The Solution: </strong>
+                                    To address the specified problem, as it pertains to th backend, a comprehensive
+                                    solution was implemented, centered
                                     around a REST API designed to manage the creation, reception, storage, and retrieval
                                     of credentials. These credentials were verified by a third-party Internet of
                                     Credentials provider. The primary databases employed in this solution were NoSQL
-                                    databases, chosen for their flexibility and scalability, as well as for the compatibility with the ceredentials data format.
+                                    databases, chosen for their flexibility and scalability, as well as for the
+                                    compatibility with the ceredentials data format.
 
                                     Proper encryption measures were implemented both at rest and in transit to ensure
                                     the security of sensitive data. The handling, transformation, and presentation of
@@ -153,7 +156,8 @@
                                     The mobile application seamlessly interacted with the REST API, utilizing it as a
                                     backend service to retrieve and display user information. This approach ensured a
                                     smooth and secure user experience, allowing individuals to manage and share their
-                                    life achievements with confidence in the integrity and privacy of their credentials. <br>
+                                    life achievements with confidence in the integrity and privacy of their credentials.
+                                    <br>
                                     <br>
                                 </p>
                             </div>
@@ -173,36 +177,49 @@
                 <div class="dropdown inline-block mt-4">
                     <div id="smartpass-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                         <!-- Add detailed project information here -->
-                        <p>Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Nam in bibendum turpis, sed pellentesque turpis. Aenean auctor
-                            erat
-                            nisl, nec dictum risus imperdiet eu. In ut ipsum et massa faucibus bibendum ac in justo.
-                            Fusce ac
-                            lorem vitae dui pharetra dapibus non ut leo. Sed eu sagittis quam. Pellentesque non lacus
-                            neque.
-                            Curabitur lectus leo, vulputate ut felis eget, feugiat gravida metus. Suspendisse in
-                            tincidunt enim,
-                            at feugiat arcu. Sed imperdiet a ligula quis tempor. In finibus molestie rhoncus. Nulla
-                            facilisi.
-                            Mauris luctus purus non vehicula posuere. Curabitur tellus tellus, pretium eget accumsan
-                            varius,
-                            aliquam ac leo. Ut et quam ac tortor luctus malesuada. Cras tincidunt molestie iaculis.
-
-                            Duis bibendum urna a placerat molestie. In at nulla sapien. Pellentesque aliquam augue sed
-                            aliquet
-                            finibus. Donec sed egestas sem. Donec consectetur, erat a varius tristique, mi eros molestie
-                            sem,
-                            consequat interdum leo nisl quis mauris. Pellentesque volutpat nibh vel arcu cursus, cursus
-                            auctor
-                            turpis pellentesque. Praesent blandit magna a nisi iaculis tempus. Quisque rhoncus ipsum
-                            nunc, vitae
-                            tristique est pellentesque in. Maecenas sed sem sit amet sem ornare pellentesque. In hac
-                            habitasse
-                            platea dictumst. Nulla ut elit enim. In tincidunt urna blandit pulvinar tincidunt. Aliquam
-                            lobortis,
-                            mi in euismod consectetur, est nunc egestas urna, ultricies fringilla lorem nisl sit amet
-                            tortor.
-                            Integer odio sapien, ornare non volutpat id, volutpat sed mi. Nunc iaculis eu mi id maximus.
+                        <p><strong>My Role:</strong> Backend. I tackled (under the supervision of the lead
+                            developer and CTO) the creation of this user authentication microservice from scratch, and
+                            creating revenue for the company as this is being offered as SaaS.
+                            Throughout the entire development lifecycle of the service, I participated as a backend
+                            developer.<br>
+                            <br>
+                            <strong>The Tech Stack:</strong> Leveraging Python for server-side logic, this tech stack
+                            utilizes boto3 for AWS service interaction, enabling seamless integration with AWS
+                            resources. Amazon API Gateway orchestrates REST APIs, while AWS Lambda supports serverless
+                            computing, allowing for efficient execution of backend processes without managing servers.
+                            SES and SNS facilitate email sending, receiving, and notifications, respectively. Amazon
+                            Cognito provides secure user authentication and management. Data security and configuration
+                            management are ensured through the use of AWS Secrets Manager, safeguarding sensitive
+                            information. The development process is streamlined with CodeCommit, offering a secure Git
+                            repository for source control. Infrastructure deployment and management are efficiently
+                            handled by AWS SAM and CloudFormation, providing templates for serverless applications and
+                            resources orchestration.<br>
+                            <br>
+                            <strong>The team:</strong> For this project the team was conformed by 1 backend
+                            developer,
+                            a lead developer, and a product owner (CTO). <br>
+                            <br>
+                            <strong>The Problem:</strong> The challenge involved designing and implementing a highly
+                            modular and scalable microservice dedicated to managing user authentication, which could be
+                            seamlessly integrated with diverse applications requiring minimal effort. This microservice
+                            aims to abstract and centralize the authentication processes, ensuring a uniform and secure
+                            authentication mechanism across multiple mobile as well as web applications.<br>
+                            <br>
+                            <strong>The Solution: </strong>
+                            The solution to the identified problem involved the development of a secure REST API,
+                            leveraging the serverless architecture of AWS Lambda and API Gateway. This approach
+                            facilitated scalability and simplified maintenance. At the heart of the user authentication
+                            service was Amazon Cognito, which provided a comprehensive set of features for managing
+                            users, handling authentication, and ensuring security. The integration with the boto3
+                            library allowed for programmatic interaction with AWS services, thereby enhancing the
+                            system's functionality. <br>
+                            <br>
+                            To enhance the system's security and user validation mechanisms, the solution included the
+                            use of AWS Simple Email Service (SES) and Simple Notification Service (SNS) for email and
+                            phone verification, respectively. This strategic use of AWS services ensured the creation of
+                            a secure, scalable, and efficient authentication microservice that could be readily
+                            integrated into various applications with minimal effort required. <br>
+                            <br>
                         </p>
                     </div>
                     <button onclick="toggleDropdown('smartpass')"
@@ -219,44 +236,59 @@
                 <div class="dropdown inline-block mt-4">
                     <div id="email-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                         <!-- Add detailed project information here -->
-                        <p>Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Nam in bibendum turpis, sed pellentesque turpis. Aenean
-                            auctor
-                            erat
-                            nisl, nec dictum risus imperdiet eu. In ut ipsum et massa faucibus bibendum ac in justo.
-                            Fusce ac
-                            lorem vitae dui pharetra dapibus non ut leo. Sed eu sagittis quam. Pellentesque non
-                            lacus
-                            neque.
-                            Curabitur lectus leo, vulputate ut felis eget, feugiat gravida metus. Suspendisse in
-                            tincidunt enim,
-                            at feugiat arcu. Sed imperdiet a ligula quis tempor. In finibus molestie rhoncus. Nulla
-                            facilisi.
-                            Mauris luctus purus non vehicula posuere. Curabitur tellus tellus, pretium eget accumsan
-                            varius,
-                            aliquam ac leo. Ut et quam ac tortor luctus malesuada. Cras tincidunt molestie iaculis.
-
-                            Duis bibendum urna a placerat molestie. In at nulla sapien. Pellentesque aliquam augue
-                            sed
-                            aliquet
-                            finibus. Donec sed egestas sem. Donec consectetur, erat a varius tristique, mi eros
-                            molestie
-                            sem,
-                            consequat interdum leo nisl quis mauris. Pellentesque volutpat nibh vel arcu cursus,
-                            cursus
-                            auctor
-                            turpis pellentesque. Praesent blandit magna a nisi iaculis tempus. Quisque rhoncus ipsum
-                            nunc, vitae
-                            tristique est pellentesque in. Maecenas sed sem sit amet sem ornare pellentesque. In hac
-                            habitasse
-                            platea dictumst. Nulla ut elit enim. In tincidunt urna blandit pulvinar tincidunt.
-                            Aliquam
-                            lobortis,
-                            mi in euismod consectetur, est nunc egestas urna, ultricies fringilla lorem nisl sit
-                            amet
-                            tortor.
-                            Integer odio sapien, ornare non volutpat id, volutpat sed mi. Nunc iaculis eu mi id
-                            maximus.
+                        <strong>My Role:</strong> Backend. I handled (under the supervision of the lead
+                        developer and CTO) the implementation of this email event data streaming ETL pipeline.
+                        The company is now gaining insight of its marketing email campaigns thanks to this
+                        implementation.
+                        Throughout the entire development lifecycle of the system, I participated as a backend
+                        developer.<br>
+                        <br>
+                        <strong>The Tech Stack:</strong> This tech stack is centered around Node.js for server-side
+                        logic, emphasizing asynchronous operations and scalability for web applications. AWS Lambda is
+                        specifically used for processing data received through SES (Simple Email Service), handling
+                        email data and storing it in Amazon S3, serving as the foundation for data storage and
+                        management within this architecture. <br>
+                        <br>
+                        Amazon Kinesis Firehose takes on the role of managing real-time data streaming, capable of
+                        capturing, transforming, and loading streaming data into Amazon S3. This facilitates further
+                        analytics and data processing tasks, leveraging the seamless integration within the AWS
+                        ecosystem. <br>
+                        <br>
+                        AWS Glue plays a key part in preparing and transforming the SES data stored in S3 for analysis,
+                        automating the ETL (extract, transform, load) processes, which is essential for organizing data
+                        into a query-able format. This structured data is then made available for interactive querying
+                        with Amazon Athena, which uses standard SQL to query data directly within Amazon S3, offering
+                        powerful data analysis capabilities without the need for a traditional database. <br>
+                        <br>
+                        The analysis results can be visualized and explored through Amazon QuickSight, which provides
+                        interactive dashboards and visualizations. QuickSight's integration with Athena and direct
+                        access to S3 data enables comprehensive insights and analytics derived from the processed SES
+                        data. <br>
+                        <br>
+                        In summary, this tech stack uses Node.js for its application logic, with AWS Lambda processing
+                        SES data for storage in S3. Amazon Kinesis Firehose, AWS Glue, Amazon Athena, and Amazon
+                        QuickSight form a pipeline that captures, processes, analyzes, and visualizes data,
+                        demonstrating a cohesive flow of data processing and analysis within the AWS cloud
+                        environment.<br>
+                        <br>
+                        <strong>The team:</strong> For this project the team was conformed by 1 backend
+                        developer,
+                        a lead developer, and a product owner (the CTO). <br>
+                        <br>
+                        <strong>The Problem:</strong> The challenge involves designing and implementing a comprehensive
+                        email event tracking system within a mobile app development context. This system needs to
+                        accurately capture, monitor, and log various email-related events, including, but not limited
+                        to, emails being sent, opened, and bounced. Furthermore, it requires the extraction, processing,
+                        and loading (ETL) of this data into a format that is conducive to analysis and can subsequently
+                        be leveraged to derive actionable insights for the marketing department, thereby facilitating
+                        data-driven decision-making and enhancing marketing strategies.<br>
+                        <br>
+                        <strong>The Solution: </strong>
+                        The solution was to develop a streamlined pipeline that captures Simple Email Service (SES)
+                        events in real-time, extracts this data on the fly, and transforms and loads it as needed. This
+                        approach keeps the marketing team's BI insights fresh, empowering them with up-to-the-minute
+                        data to inform their strategies.<br>
+                        <br>
                         </p>
                     </div>
                     <button onclick="toggleDropdown('email')"
