--- a/index.html
+++ b/index.html
@@ -297,6 +297,77 @@
                     </button>
                 </div>
             </div>
+            <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
+                <h3 class="text-xl font-bold mb-2">KME360</h3>
+                <p class="text-gray-300">
+                    A Learning Management Experience Saas Web App
+                </p>
+                <div class="dropdown inline-block mt-4">
+                    <div id="kme-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
+                        <!-- Add detailed project information here -->
+                        <strong>My Role:</strong> Backend. I resolved support tickets and created new features for a
+                        Sass
+                        LMS monolithic web application.<br>
+                        <br>
+                        <strong>The Tech Stack:</strong> In this tech stack, Python and Django form the backbone for
+                        server-side logic and web development, while PostgreSQL is employed as the relational database
+                        for efficient data storage. AWS Cloud9 serves as the integrated development environment,
+                        providing a collaborative and cloud-based platform for coding and testing. GitHub is utilized
+                        for version control, offering a centralized repository for source code management and
+                        collaboration. Celery is integrated for distributed task processing, enhancing the scalability
+                        and responsiveness of the application. Third-party libraries are selectively incorporated to
+                        leverage additional functionalities and streamline development processes. This stack provides a
+                        robust foundation for building scalable, secure, and feature-rich web applications. <br>
+                        <br>
+                        <strong>The team:</strong> For this project the team was conformed by 3 backend
+                        developers, 3 frontend developers,
+                        and a lead developer. <br>
+                        <br>
+                        <strong>The Problem:</strong> Providing assistance and implementing additional functionalities
+                        during the maintenance phase of this robust Learning Management Experience Software as a Service
+                        (SaaS) application posed a challenge.<br>
+                        <br>
+                        <strong>The Solution: </strong>
+                        The solution involved addressing each challenge through a systematic approach: comprehending
+                        the problem, collecting requirements, designing a solution, coding, testing, and deploying—all
+                        executed in an agile methodology.<br>
+                        <br>
+                        </p>
+                    </div>
+                    <button onclick="toggleDropdown('kme')"
+                        class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
+                        Details
+                    </button>
+                </div>
+            </div>
+
+        </section>
+        <section id="contact">
+            <h4 class="text-3xl mb-8 text-center">Connect with Me</h4>
+
+            <div class="flex justify-center space-x-4">
+                <div class="profile-link">
+                    <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank"
+                        class="flex items-center no-underline hover:underline">
+                        <img src="LI-In-Bug-green.png" alt="LinkedIn Icon" class="w-6 h-6 mr-2 text-green-500">
+                        LinkedIn
+                    </a>
+                </div>
+                <div class="profile-link">
+                    <a href="https://github.com/camichaves79" target="_blank"
+                        class="flex items-center no-underline hover:underline">
+                        <img src="github-mark-green.png" alt="GitHub Icon" class="w-6 h-6 mr-2 text-green-500">
+                        GitHub
+                    </a>
+                </div>
+                <div class="profile-link">
+                    <a href="https://x.com/CamiloChavesH79" target="_blank"
+                        class="flex items-center no-underline hover:underline">
+                        <img src="X_logo_2023_original.png" alt="Twitter Icon" class="w-6 h-6 mr-2 text-green-500">
+                        Twitter
+                    </a>
+                </div>
+            </div>
 
         </section>
     </div>
