--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="#projects"
                         class="px-4 py-2 bg-green-700 hover:bg-green-800 transition-colors rounded">Projects</a>
                     <a href="#contact"
-                        class="px-4 py-2 bg-green-700 hover:bg-green-800 transition-colors rounded">Contact</a>
+                        class="px-4 py-2 bg-green-700 hover:bg-green-800 transition-colors rounded">Connect</a>
                 </div>
             </div>
         </div>
