--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div>
                     <a href="#projects"
                         class="px-4 py-2 bg-green-700 hover:bg-green-800 transition-colors rounded">Projects</a>
-                    <a href="#contact"
+                    <a href="#connect"
                         class="px-4 py-2 bg-green-700 hover:bg-green-800 transition-colors rounded">Connect</a>
                 </div>
             </div>
@@ -342,7 +342,7 @@
             </div>
 
         </section>
-        <section id="contact">
+        <section id="connect">
             <h4 class="text-3xl mb-8 text-center">Connect with Me</h4>
 
             <div class="flex justify-center space-x-4">
