grammar and spelling chekc 01

--- a/index.html
+++ b/index.html
@@ -172,14 +172,13 @@
             <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">SmartPass</h3>
                 <p class="text-gray-300">
-                    A user authentication API
+                    A user authentication API now being offered commercially as SaaS.
                 </p>
                 <div class="dropdown inline-block mt-4">
                     <div id="smartpass-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                         <!-- Add detailed project information here -->
                         <p><strong>My Role:</strong> Backend. I tackled (under the supervision of the lead
-                            developer and CTO) the creation of this user authentication microservice from scratch, and
-                            creating revenue for the company as this is being offered as SaaS.
+                            developer and CTO) the creation of this user authentication microservice from scratch. 
                             Throughout the entire development lifecycle of the service, I participated as a backend
                             developer.<br>
                             <br>
@@ -231,16 +230,14 @@
             <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">Email campaign ETL</h3>
                 <p class="text-gray-300">
-                    An email event data streaming ETL pipeline
+                    An email event data streaming ETL pipeline providing business insights for marketing email campaigns
                 </p>
                 <div class="dropdown inline-block mt-4">
                     <div id="email-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                         <!-- Add detailed project information here -->
                         <strong>My Role:</strong> Backend. I handled (under the supervision of the lead
                         developer and CTO) the implementation of this email event data streaming ETL pipeline.
-                        The company is now gaining insight of its marketing email campaigns thanks to this
-                        implementation.
-                        Throughout the entire development lifecycle of the system, I participated as a backend
+                        Throughout the coding, testing, deployment and maintenance of the system, I participated as a backend
                         developer.<br>
                         <br>
                         <strong>The Tech Stack:</strong> This tech stack is centered around Node.js for server-side
@@ -275,11 +272,11 @@
                         developer,
                         a lead developer, and a product owner (the CTO). <br>
                         <br>
-                        <strong>The Problem:</strong> The challenge involves designing and implementing a comprehensive
-                        email event tracking system within a mobile app development context. This system needs to
+                        <strong>The Problem:</strong> The challenge involved designing and implementing a comprehensive
+                        email event tracking system. This system needed to
                         accurately capture, monitor, and log various email-related events, including, but not limited
-                        to, emails being sent, opened, and bounced. Furthermore, it requires the extraction, processing,
-                        and loading (ETL) of this data into a format that is conducive to analysis and can subsequently
+                        to, emails being sent, opened, and bounced. Furthermore, it required the extraction, processing,
+                        and loading (ETL) of this data into a format that is conducive to analysis and could subsequently
                         be leveraged to derive actionable insights for the marketing department, thereby facilitating
                         data-driven decision-making and enhancing marketing strategies.<br>
                         <br>
